# multicam-calibration

./: README.md  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: api.rst  bundle_adjustment.rst  calib_objects.rst  calibration.rst  calibration_tutorial.ipynb  conf.py  detection.rst  flatibration_tutorial.ipynb  geometry.rst  index.rst  install.rst  io.rst  math.ipynb  setup.rst  troubleshooting.rst  tutorial.ipynb  viz.rst
docs/source/_static/: build_calib_object.ai  calibration_align_extrinsics.ai  setup_intrinsics_extrinsics.ai  setup_opposite_cameras.ai
multicam_calibration/: __init__.py  _version.py  bundle_adjustment.py  calibration.py  detection.py  flatibration.py  geometry.py  io.py  viz.py
multicam_calibration/calibration_objects/: chessboard.py
