[metadata]
name = multicam-calibration
author = Caleb Weinreb
author_email = calebsw@gmail.com
url = https://github.com/calebweinreb/multicam-calibration
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    scipy
    vidio
    networkx
    tqdm
    h5py
    matplotlib
    ipykernel

[options.package_data]
* = *.md

[versioneer]
VCS = git
style = pep440
versionfile_source = multicam_calibration/_version.py
versionfile_build = multicam_calibration/_version.py
tag_prefix =
parentdir_prefix = 